# Vienna-rust

./: .gitignore  Cargo.toml  README.md  TODO.md  build-debug.bat  build-debug.ps1  build-portable.bat  build-portable.ps1  package-server.ps1  update-ui.ps1
.cargo/: config.toml
.codex/environments/: environment-2.toml  environment.toml
Move files in folder to target debug/: run.ps1
assets/: run.bat
portable-template/: start.ps1
portable-template/web/: index.html
rust/: README.md
rust/apiserver/: Cargo.toml
rust/apiserver/src/: main.rs
rust/buildplate-importer/: Cargo.toml
rust/buildplate-importer/src/: main.rs
rust/buildplate-launcher/: Cargo.toml
rust/buildplate-launcher/src/: main.rs
rust/cdn/: Cargo.toml
rust/cdn/src/: main.rs
rust/db/: Cargo.toml
rust/db/src/: lib.rs
rust/eventbus-server/: Cargo.toml
rust/eventbus-server/src/: main.rs
rust/example-hello-mcemod/src/: lib.rs
rust/locator/: Cargo.toml
rust/locator/src/: main.rs
rust/mcemod-packager/: Cargo.toml
rust/mcemod-packager/src/: main.rs
rust/modloader/: Cargo.toml
rust/modloader/src/: lib.rs
rust/objectstore-server/: Cargo.toml
rust/objectstore-server/src/: lib.rs  main.rs
rust/staticdata/: Cargo.toml
rust/staticdata/src/: lib.rs
rust/tappables/: Cargo.toml
rust/tappables/src/: lib.rs  main.rs
server-portable/: run.bat  run.ps1  stop.bat  stop.ps1  update.bat  update.ps1
server-portable/mods/: hello-mcemod.mcemod
server-portable/vma-sdk/: README.txt
server-portable/vma-sdk/example-hello-mcemod/: Cargo.toml
server-portable/vma-sdk/vma/: Cargo.toml
server-portable/vma-sdk/vma/src/: lib.rs
