[workspace]
resolver = "2"
default-members = ["rust/apiserver"]
members = [
    "rust/apiserver",
    "rust/buildplate-importer",
    "rust/buildplate-launcher",
    "rust/cdn",
    "rust/db",
    "rust/eventbus-server",
    "rust/example-hello-mcemod",
    "rust/locator",
    "rust/mcemod-packager",
    "rust/modloader",
    "rust/objectstore-server",
    "rust/staticdata",
    "rust/tappables",
    "rust/vma",
]
