[package]
name = "vienna-apiserver"
version = "0.0.4"
edition = "2021"
default-run = "vienna-apiserver"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vienna-db = { path = "../db" }
vienna-modloader = { path = "../modloader" }
vienna-staticdata = { path = "../staticdata" }
vienna-tappables = { path = "../tappables" }

