[package]
name = "vienna-buildplate-importer"
version = "0.0.3"
edition = "2021"
default-run = "vienna-buildplate-importer"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

