[package]
name = "vienna-cdn"
version = "0.0.4"
edition = "2021"
default-run = "vienna-cdn"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


