[package]
name = "vienna-locator"
version = "0.1.0"
edition = "2021"
default-run = "vienna-locator"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

