[package]
name = "vienna-objectstore"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "vienna-objectstore-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.37", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

