[package]
name = "vienna-tappables"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vienna-tappablesgenerator"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

